Mon Feb 14 22:45:11 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/docs/design_notes/plugins.html:
        * tools/modeling/docs/user_guide/index.html:

          Removed svn:needs-lock property.  Creating read-only files in the
          working copy is not compatible with the nightly build scripts.

Mon Feb 14 22:30:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/GroupPresentation/SubscriberListener.cpp:
        * tools/modeling/codegen/model/CopyQos.h:
        * tools/modeling/codegen/model/EntityProfiles.cpp:
        * tools/modeling/codegen/model/NullListener.h:
        * tools/modeling/codegen/model/NullReaderListener.h:
        * tools/modeling/codegen/model/Utilities.h:

          Resloved warnings generated by various compilers and configurations.

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/.settings/org.eclipse.jdt.core.prefs:

          Use the same JDT settings from the other plugins.

Mon Feb 14 20:19:02 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.model/model/Topics.ecore:

          Moved base class TopicDescriptions's datatype association to Topic and
          MultiTopic since ContentFilteredTopic does not have its own datatype
          but implicitly uses its related Topic's datatype.

        * tools/modeling/docs/design_notes/images/Topics.png:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfmap:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.trace:
        * tools/modeling/plugins/org.opendds.modeling.model.edit/plugin.properties:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_DataLib.genmodel: